update gitignore and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 captum==0.6.0
 Kivy==2.2.1
 Kivy_examples==2.2.1
-kivymd==1.1.1
+kivymd==1.2.0
 numpy==1.25.2
 Pillow==10.0.0
 torchvision==0.15.2
+matplotlib==3.7.2
