--- a/.github/workflows/flet_deploy.yml
+++ b/.github/workflows/flet_deploy.yml
@@ -47,13 +47,13 @@ jobs:
     - name: Flet Build Web
       run: |
             echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
-            flet publish main.py --base-url ${GITHUB_REPOSITORY#*/} --route-url-strategy hash
+            flet publish main.py --base-url ${GITHUB_REPOSITORY#*/} --route-url-strategy hash --assets assets
 
     - name: Upload Artifact
       uses: actions/upload-pages-artifact@v3
       with:
         name: web-build-artifact  # the name of the artifact
-        path: build/web
+        path: dist
 
   deploy:
     needs: build  # wait for the "build" job to get done before executing this "deploy" job
